fix: button gap

--- a/src/features/dashboard/update-app/AppUpdateForm/app-update-form.scss
+++ b/src/features/dashboard/update-app/AppUpdateForm/app-update-form.scss
@@ -27,10 +27,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
-    button {
-      margin-inline: 8px;
-    }
+    gap: 8px;
   }
 
   .mblk {
